# noisey

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  com.noisey.ambient.plist  cross-compile.sh  noisey.service
.claude/skills/sound-design/: SKILL.md
.github/workflows/: ci.yml
docs/: BUILD.md
ios/: mise.toml
ios/Noisey/: NoiseyApp.swift
ios/Noisey.xcodeproj/: project.pbxproj
ios/Noisey.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ios/Noisey.xcodeproj/project.xcworkspace/xcuserdata/peshka.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Noisey.xcodeproj/xcshareddata/xcschemes/: Noisey.xcscheme
ios/Noisey/Audio/: AudioEngine.swift  DSP.swift  DeviceVolumeController.swift  EffectsChain.swift  Generators.swift  NowPlayingManager.swift  SoundFileManager.swift  Tonality.swift
ios/Noisey/Models/: Schedule.swift  SoundEntry.swift  StatusResponse.swift  TimerStatus.swift  World.swift
ios/Noisey/Services/: NoiseyClient.swift
ios/Noisey/State/: NoiseyStore.swift
ios/Noisey/Views/: BalanceSlider.swift  CloudFieldView.swift  ContentView.swift  DragControllers.swift  FireflyFieldView.swift  FireflyVolumeView.swift  MoonVolumeView.swift  NowPlayingBar.swift  RoutePickerView.swift  ScheduleView.swift  ServerSetupView.swift  SkyObjectView.swift  SleepTimerView.swift  SoundCardView.swift  SoundGridView.swift  StarfieldView.swift  SunVolumeView.swift  WorldPickerSheet.swift  WorldSwitcherView.swift
src/: audio.rs  display.rs  main.rs  noise.rs  server.rs  state.rs  wifi.rs
static/: app.js  index.html  moon.js  setup.css  setup.html  setup.js  style.css
