[package]
name = "noisey"
version = "0.1.0"
edition = "2021"
description = "An IoT ambient noise machine with web-based remote control"
license = "GPL-2.0"

[features]
default = []
eink = []
wifi = []

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "6"
rand = { version = "0.8", features = ["small_rng"] }
cpal = "0.15"
symphonia = { version = "0.5", features = ["aac", "alac", "mp3", "ogg", "wav", "pcm", "isomp4"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2"
